--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Talnet-Server-Backend
+application.vendor=Edi Gotlieb
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,12 +25,13 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/Talnet-Server-Backend.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.c3p0-0.9.5-pre7.jar=lib\\c3p0-0.9.5-pre7.jar
-file.reference.c3p0-oracle-thin-extras-0.9.5-pre7.jar=lib\\c3p0-oracle-thin-extras-0.9.5-pre7.jar
-file.reference.JSON-java.jar=lib\\JSON-java.jar
-file.reference.mchange-commons-java-0.2.6.5.jar=lib\\mchange-commons-java-0.2.6.5.jar
-file.reference.mysql-connector-java-5.1.29-bin.jar=lib\\mysql-connector-java-5.1.29-bin.jar
+file.reference.c3p0-0.9.5-pre7.jar=lib/c3p0-0.9.5-pre7.jar
+file.reference.c3p0-oracle-thin-extras-0.9.5-pre7.jar=lib/c3p0-oracle-thin-extras-0.9.5-pre7.jar
+file.reference.JSON-java.jar=lib/JSON-java.jar
+file.reference.mchange-commons-java-0.2.6.5.jar=lib/mchange-commons-java-0.2.6.5.jar
+file.reference.mysql-connector-java-5.1.29-bin.jar=lib/mysql-connector-java-5.1.29-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
