--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,19 +27,19 @@ dist.jar=${dist.dir}/Talnet-Server-Backend.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.c3p0-0.9.5-pre7.jar=lib/c3p0-0.9.5-pre7.jar
-file.reference.c3p0-oracle-thin-extras-0.9.5-pre7.jar=lib/c3p0-oracle-thin-extras-0.9.5-pre7.jar
+file.reference.c3p0-0.9.5-pre8.jar=lib/c3p0-0.9.5-pre8.jar
+file.reference.c3p0-oracle-thin-extras-0.9.5-pre8.jar=lib/c3p0-oracle-thin-extras-0.9.5-pre8.jar
 file.reference.JSON-java.jar=lib/JSON-java.jar
-file.reference.mchange-commons-java-0.2.6.5.jar=lib/mchange-commons-java-0.2.6.5.jar
+file.reference.mchange-commons-java-0.2.7.jar=lib/mchange-commons-java-0.2.7.jar
 file.reference.mysql-connector-java-5.1.32-bin.jar=lib/mysql-connector-java-5.1.32-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.JSON-java.jar}:\
-    ${file.reference.c3p0-0.9.5-pre7.jar}:\
-    ${file.reference.c3p0-oracle-thin-extras-0.9.5-pre7.jar}:\
-    ${file.reference.mchange-commons-java-0.2.6.5.jar}:\
-    ${file.reference.mysql-connector-java-5.1.32-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.32-bin.jar}:\
+    ${file.reference.c3p0-0.9.5-pre8.jar}:\
+    ${file.reference.c3p0-oracle-thin-extras-0.9.5-pre8.jar}:\
+    ${file.reference.mchange-commons-java-0.2.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
