--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=
 excludes=
 file.reference.c3p0-0.9.5-pre8.jar=lib/c3p0-0.9.5-pre8.jar
 file.reference.c3p0-oracle-thin-extras-0.9.5-pre8.jar=lib/c3p0-oracle-thin-extras-0.9.5-pre8.jar
+file.reference.commons-lang3-3.3.2.jar=lib/commons-lang3-3.3.2.jar
 file.reference.JSON-java.jar=lib/JSON-java.jar
 file.reference.mchange-commons-java-0.2.7.jar=lib/mchange-commons-java-0.2.7.jar
 file.reference.mysql-connector-java-5.1.32-bin.jar=lib/mysql-connector-java-5.1.32-bin.jar
@@ -39,7 +40,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.32-bin.jar}:\
     ${file.reference.c3p0-0.9.5-pre8.jar}:\
     ${file.reference.c3p0-oracle-thin-extras-0.9.5-pre8.jar}:\
-    ${file.reference.mchange-commons-java-0.2.7.jar}
+    ${file.reference.mchange-commons-java-0.2.7.jar}:\
+    ${file.reference.commons-lang3-3.3.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
